Squashed commit of the following:
commit e4334f7384911f31f1954db1d489f94ba17d0bb4
Author: lisichaviano <lisichaviano98@gmail.com>
Date:   Sat Jan 13 19:54:33 2024 +0100

    Fix responsiveness

commit 103f93a1083cb1e3b3dad51097d2d13438bc369e
Author: lisichaviano <lisichaviano98@gmail.com>
Date:   Sat Jan 13 19:54:21 2024 +0100

    Add new styles to tailwind

commit 56ad04a19bfe811f511c50ce3059eef61e7717c7
Author: lisichaviano <lisichaviano98@gmail.com>
Date:   Sat Jan 13 19:54:07 2024 +0100

    Install daisy tailwind

commit 892d6e9bbfb2ae3dc9bc6d229f2563c532913d06
Author: lisichaviano <lisichaviano98@gmail.com>
Date:   Sat Jan 13 18:29:21 2024 +0100

    Added new icons

commit e4b1342aebb8117e67270b8f25e457f8e638eb26
Author: lisichaviano <lisichaviano98@gmail.com>
Date:   Sat Jan 13 15:29:01 2024 +0100

    Fixed responsive-width

commit 582b01aeccfe54a1f96a4103632d4d10962730c7
Author: lisichaviano <lisichaviano98@gmail.com>
Date:   Sat Jan 13 01:08:57 2024 +0100

    Added download button to download CV

commit b79a7fe87116255edf57baab211fddb5dc203966
Author: lisichaviano <lisichaviano98@gmail.com>
Date:   Sat Jan 13 00:51:02 2024 +0100

    Created new Resume page

commit a98894c380cad9669a897591fe78901df2d9a740
Author: lisichaviano <lisichaviano98@gmail.com>
Date:   Sat Jan 13 00:50:52 2024 +0100

    Fixed layout

commit 87281ca53b48f09ef6f6c7e826f9dea94c5b1072
Author: lisichaviano <lisichaviano98@gmail.com>
Date:   Sat Jan 13 00:50:42 2024 +0100

    Added gitHubIcon

commit 6452040bbe01a2bc22718082737f9bccd5f39cd2
Author: lisichaviano <lisichaviano98@gmail.com>
Date:   Sat Jan 13 00:50:33 2024 +0100

    Set styles globally

commit d99d2225c2f32f03d4a88dc78958b6f91b0eabf1
Author: lisichaviano <lisichaviano98@gmail.com>
Date:   Sat Jan 13 00:50:20 2024 +0100

    Fixed HomePage

commit 9defc86c8b10e07127d45f7e643fa2292bd4d8e2
Author: lisichaviano <lisichaviano98@gmail.com>
Date:   Sat Jan 13 00:50:05 2024 +0100

    Removed file

commit 0036a2a1f2ac88df195c

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -1,25 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Syne:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Questrial:wght@400&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-body {
-  @apply leading-[normal] m-0;
-}
-*,
-::before,
-::after {
-  border-width: 0;
+
+@layer base {
+  html {
+    hyphens: auto;
+    overflow-wrap: break-word;
+  }
 }
 
-@keyframes slide-in-left {
-  0% {
-    transform: translateX(-200px);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
+@layer components {
+  .responsive-width {
+    @apply px-12 py-8 sm:px-32 sm:py-12 md:px-40 md:py-16 lg:px-60 lg:py-36 xl:px-80 2xl:px-[400px];
   }
 }
